--- a/rim/py_neo_quant_rim_adequate_price_sequence.ipynb
+++ b/rim/py_neo_quant_rim_adequate_price_sequence.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# company_name = '현대건설'\n",
-    "company_name = 'SPC삼립'\n",
+    "company_name = '현대건설'\n",
     "company_code = nq.get_company_code(company_name, companies)\n",
     "print('company name : ' + company_name)\n",
     "print('company code : ' + company_code)"
