--- a/rim/py_neo_quant_rim_adequate_price_sequence.ipynb
+++ b/rim/py_neo_quant_rim_adequate_price_sequence.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# company_name = '현대건설'\n",
-    "company_name = '현대건설'\n",
+    "company_name = '효성티앤씨'\n",
     "company_code = nq.get_company_code(company_name, companies)\n",
     "print('company name : ' + company_name)\n",
     "print('company code : ' + company_code)"
@@ -190,7 +190,7 @@
     "            break\n",
     "    return stadard_col_name\n",
     "\n",
-    "def get_year_name_list(fr_df):\n",
+    "def get_year_name_list(fr_df, until_this_year = True):\n",
     "    big_col_name = 'Annual'\n",
     "    roe_index_name = 'ROE'\n",
     "    asset_index_name = '지배주주지분'\n",
@@ -203,9 +203,14 @@
     "    year_name = ''\n",
     "    roes = info.loc[roe_index_name][big_col_name]\n",
     "    assets = info.loc[asset_index_name][big_col_name]\n",
+    "    today_year = datetime.date.today().year\n",
     "    for index in assets.index:\n",
     "#         if index.endswith(('(E)')):\n",
     "#             continue\n",
+    "        if until_this_year:\n",
+    "            year = int(index[:4])\n",
+    "            if year > today_year:\n",
+    "                continue\n",
     "        if not math.isnan(assets[index]) and not math.isnan(roes[index]):\n",
     "            year_name = index\n",
     "#             year_name = str(pd.to_datetime(year_name).year)\n",
@@ -316,7 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year_name_list = get_year_name_list(fr_df)"
+    "until_this_year = False\n",
+    "year_name_list = get_year_name_list(fr_df, until_this_year)"
    ]
   },
   {
