--- a/rim/py_neo_quant_rim_my_port_sequence_chart.ipynb
+++ b/rim/py_neo_quant_rim_my_port_sequence_chart.ipynb
@@ -86,8 +86,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "until_this_year = True\n",
     "for company_name in company_list:\n",
-    "    nq.show_sequence_adequate_price_chart(company_name, companies, base_profit_ratio)\n",
+    "    nq.show_sequence_adequate_price_chart(company_name, companies, base_profit_ratio, until_this_year)\n",
     "    time.sleep(1)\n",
     "    print('=================================================')\n",
     "    print(' ')"
