--- a/rim/py_neo_quant_rim_adequate_price_sequence.ipynb
+++ b/rim/py_neo_quant_rim_adequate_price_sequence.ipynb
@@ -20,6 +20,7 @@
     "import bs4\n",
     "import math\n",
     "import time\n",
+    "import datetime\n",
     "from datetime import date, timedelta\n",
     "import NeoQuant as nq\n",
     "import matplotlib.pyplot as plt\n",
@@ -62,10 +63,19 @@
    "outputs": [],
    "source": [
     "# company_name = '현대건설'\n",
-    "company_name = '효성티앤씨'\n",
+    "company_name = '한일현대시멘트'\n",
     "company_code = nq.get_company_code(company_name, companies)\n",
     "print('company name : ' + company_name)\n",
     "print('company code : ' + company_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nq.show_company_candidate(company_name, companies)"
    ]
   },
   {
@@ -279,7 +289,16 @@
     "\n",
     "    asset = info.loc[asset_index_name][big_col_name, base_year_name]\n",
     "    asset = asset * 100000000\n",
-    "    return asset"
+    "    return asset\n",
+    "\n",
+    "def get_dividend(fr_df, base_year_name):\n",
+    "    big_col_name = 'Annual'\n",
+    "    index_name = '배당수익률'\n",
+    "    \n",
+    "    fr_df = fr_df.set_index(fr_df.columns[0])\n",
+    "\n",
+    "    info = fr_df.loc[index_name][big_col_name, base_year_name]\n",
+    "    return info\n"
    ]
   },
   {
@@ -321,6 +340,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fr_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "until_this_year = False\n",
     "year_name_list = get_year_name_list(fr_df, until_this_year)"
    ]
@@ -338,6 +366,7 @@
     "    roe =  get_roe(fr_df, year_name)\n",
     "    net_profit = get_net_profit(fr_df, year_name)\n",
     "    per = get_per(fr_df, year_name)\n",
+    "    dividend = get_dividend(fr_df, year_name)\n",
     "    \n",
     "    price_high = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 1)\n",
     "    price_middle = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.9)\n",
@@ -350,11 +379,13 @@
     "    print('net profit : ' + str(net_profit))\n",
     "    print('roe : ' + str(roe))\n",
     "    print('per : ' + str(per))\n",
+    "    print('dividend : ' + str(dividend))\n",
     "    print('very low : ' + str(price_very_low))\n",
     "    print('buy : below ' + str(price_low))\n",
     "    print('sell 1/3 : ' + str(price_middle))\n",
     "    print('sell 1/3 : ' + str(price_high))\n",
     "\n",
+    "#     sector_df['dis_rate'] = sector_df['price'] / sector_df['low']\n",
     "    \n",
     "#     if (price_very_low >= price_low):\n",
     "#         price_low = int(price_very_low * 1.05)\n",
@@ -372,6 +403,9 @@
     "        year_name = year_name.replace('(E)', '')\n",
     "    \n",
     "    base_year = pd.to_datetime(year_name).year\n",
+    "    final_year_price = price_df.loc[str(base_year)][company_code][-1]\n",
+    "    print('final year price : ' + str(final_year_price))\n",
+    "    print('dis rate : ' + str(final_year_price / price_low))\n",
     "\n",
     "    if (base_year == final_year):\n",
     "        start_date = price_df.iloc[-1].name + timedelta(days=1)\n",
@@ -388,6 +422,8 @@
     "        price_df = price_df.append(year_df)\n",
     "        \n",
     "    base_year = str(base_year)\n",
+    "    \n",
+    "    \n",
     "    try:\n",
     "        price_df.loc[base_year]['price_very_low'] = [price_very_low] * len(price_df.loc[base_year])\n",
     "        price_df.loc[base_year]['price_low'] = [price_low] * len(price_df.loc[base_year])\n",
