--- a/rim/py_neo_quant_rim_company_with_keyword_sequence_chart.ipynb
+++ b/rim/py_neo_quant_rim_company_with_keyword_sequence_chart.ipynb
@@ -51,6 +51,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## get company code list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_name = '이건'\n",
+    "company_list = nq.show_company_candidate(company_name, companies)\n",
+    "company_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_name_list = company_list['company'].tolist()\n",
+    "company_name_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## bond spread"
    ]
   },
@@ -78,19 +106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "company_list = [\n",
-    "        'S-Oil', \n",
-    "    ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "until_this_year = True\n",
-    "for company_name in company_list:\n",
+    "until_this_year = False\n",
+    "for company_name in company_name_list:\n",
     "    nq.show_sequence_adequate_price_chart(company_name, companies, base_profit_ratio, until_this_year)\n",
     "    time.sleep(1)\n",
     "    print('=================================================')\n",
