--- a/rim/py_neo_quant_rim_company_with_keyword_sequence_chart.ipynb
+++ b/rim/py_neo_quant_rim_company_with_keyword_sequence_chart.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "company_name = '이건'\n",
+    "company_name = '현대중공업'\n",
     "company_list = nq.show_company_candidate(company_name, companies)\n",
     "company_list"
    ]
