--- a/rim/py_neo_quant_rim_company_with_keyword_sequence_chart.ipynb
+++ b/rim/py_neo_quant_rim_company_with_keyword_sequence_chart.ipynb
@@ -15,6 +15,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import sys\n",
+    "# print(sys.executable) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# /usr/local/Cellar/jupyterlab/3.2.4/libexec/bin/python3.9 -m pip install lxml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip3 install lxml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import requests\n",
     "import bs4\n",
@@ -60,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "company_name = '현대중공업'\n",
+    "company_name = '제강'\n",
     "company_list = nq.show_company_candidate(company_name, companies)\n",
     "company_list"
    ]
@@ -117,7 +145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -131,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
